[package]
name = "hyper_ruby"
version = "0.1.0"
edition = "2021"
authors = ["alistairjevans <alistair@betterstack.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.5"
tokio-stream = { version = "0.1", features = ["net"] }
crossbeam-channel = "0.5.14"
rb-sys = "0.9.110"
