[package]
name = "hyper_ruby"
version = "0.1.0"
edition = "2021"
authors = ["alistairjevans <alistair@betterstack.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2", features = ["rb-sys"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
tokio-stream = { version = "0.1", features = ["net"] }
crossbeam-channel = "0.5.14"
rb-sys = "0.9.110"
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1.2"
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls"] }